NEARLY implemented photos
-Currently uploads and is received correctly by server
-Need to fiddle with where file is stored
-Tidy up getPhoto()

#story[874]